--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "tracer": "^0.8.12",
     "tsc": "^1.20150623.0",
     "typescript": "^2.8.3"
-   
   },
   "devDependencies": {
     "@types/node": "8.5.2",
@@ -27,7 +26,26 @@
     "gulp-nodemon": "2.2.1",
     "gulp-typescript": "3.2.3",
     "jest": "^21.2.1",
+    "ts-jest": "^21.1.3",
     "proxyquire": "1.8.0"
   },
-  "main": "app.js"
+  "main": "app.js",
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{ts}"
+    ],
+    "coverageDirectory": "./test-coverage",
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/tests/v1/.*|\\.(test|spec))\\.(ts|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ]
+  }
 }
